--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	
 		
 	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoibmt0IiwiYSI6IjdlenFJSUUifQ.uXNGvG2H_hJJE0UltStzBg', {
+		crossOrigin: true,
 		maxZoom: 18,
 		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
 			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
