Updated link to CSV file

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 	map.attributionControl.addAttribution('Population data &copy; <a href="http://census.gov/">US Census Bureau</a>');
 
-	Papa.parse("https://d2ppvlu71ri8gs.cloudfront.net/items/2S0q1r3q43211g0K353p/PAHouse.csv", {
+	Papa.parse("https://nicholastulach.github.io/fdpa-demo/PAHouse.csv", {
     	download: true,
     	header: true,
 	    complete: function(results, file) {
