--- a/index.html
+++ b/index.html
@@ -152,17 +152,12 @@
 	legend.onAdd = function (map) {
 
 		var div = L.DomUtil.create('div', 'info legend'),
-			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
-			labels = [],
-			from, to;
+			grades = ["Yes", "No", "Maybe"],
+			labels = [];
 
-		for (var i = 0; i < grades.length; i++) {
-			from = grades[i];
-			to = grades[i + 1];
-
+		for grade in grades {
 			labels.push(
-				'<i style="background:' + getColor(from + 1) + '"></i> ' +
-				from + (to ? '&ndash;' + to : '+'));
+				'<i style="background:' + getColor(grade) + '"></i> ' + grade);
 		}
 
 		div.innerHTML = labels.join('<br>');
