Minor wording change

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	};
 
 	info.update = function (props) {
-		this._div.innerHTML = '<h4>PA House District</h4>' +  (props ? '<b>' + props.LEG_DISTRI + '</b><br />'	: 'Hover over a district');
+		this._div.innerHTML = '<h4>PA House District</h4>' +  (props ? '<b>' + props.LEG_DISTRI + '</b><br />'	: 'Select a district');
 	};
 
 	info.addTo(map);
