--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div id='map'></div>
 
-<script type="text/javascript" src="https://raw.githubusercontent.com/mholt/PapaParse/master/papaparse.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.2.0/papaparse.min.js"></script>
 
 <script type="text/javascript" src="pa-house.js"></script>
 
